# weewa_android_app

./: build.gradle  gradle.properties  settings.gradle
FlycoTabLayout_Lib/: build.gradle
FlycoTabLayout_Lib/src/main/res/values/: attrs.xml
app/: build.gradle  proguard-rules.pro  weewa
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: slide_out_left.xml
app/src/main/res/color/: icloud_video_category_btn_test_color_selector.xml
app/src/main/res/drawable/: base_checkbox_icon_selector.xml  bg_gray_raduis5.xml  bg_orange_raduis5.xml  bg_white_raduis10.xml  bg_white_raduis5.xml  bg_white_top.xml  bg_white_update.xml  bluetooth_dialog_open_bg.xml  bluetooth_dialog_open_btn.xml  bluetooth_disconnect_btn.xml  border_bottom_gray.xml  camera_energy_progress_bar.xml  camera_info_area_bg.xml  camera_storage_progress_bar.xml  camera_usage_progress_bar.xml  camera_video_bg.xml  common_dialog_btn_left.xml  common_dialog_btn_right.xml  delete_account_btn_background.xml  device_fragment_device_item_bottom_bg.xml  device_fragment_device_item_btn_connect.xml  device_fragment_no_device_item_bg.xml  device_fragment_no_device_item_btn_add.xml  device_list_device_item_bottom_bg.xml  device_off_btn_bg.xml  device_on_btn_bg.xml  dialog_loading.xml  feedback_btn_right_blue.xml  feedback_edit_bg.xml  feedback_edit_color_cursor.xml  icloud_video_category_selected.xml  icloud_video_edit_selector.xml  (+27 more)
weewa_lib/: API.md  build.gradle
weewa_lib/src/main/: AndroidManifest.xml
weewa_lib/src/main/jni/: CMakeLists.txt  binding.cpp  byte_array.cpp  byte_array.h  crypto.cpp  crypto.h
(+477 files in other folders)
